# TestEuler

./: .gitignore  CMakeLists.txt
include/: CommonVals.h
src/: testEuler.cpp
